# apb_rtl

./: .gitignore  README.md  main.py  prompt.txt  pyproject.toml
docs/: Specification.md
golden/: apb_master.sv  apb_slave.sv  apb_top.sv
sim_build/: sim.vvp  test_apb_runner.result.xml
sources/: apb_master.sv  apb_slave.sv  apb_top.sv
tests/: test_apb_rtl_hidden.py
tests/sim_build/: sim.vvp  test_apb_runner.result.xml
