[project]
name = "apb-rtl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cocotb>=2.0.1",
    "pytest>=9.0.2",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
# Live INFO logs without typing --log-cli-level (avoids en-dash “–” typo from copy/paste)
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
